spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,13 +149,17 @@ header{
     background-color: white;
 }
 
-.bg-grey, .bg-grey-2{
+.bg-grey, .bg-grey-2, .bg-grey-3{
     background-color: #F4F4F4;
 }
 
 .bg-grey-2{
     width: 100vw;
     padding-bottom: 50px;
+}
+
+.bg-grey-3{
+    padding-bottom: 10px;
 }
 
 .discord1, .text-box-1, .discord2, .text-box-2{
@@ -217,8 +221,12 @@ header{
 
 footer{
     background-color: #1A1D1F;
-    padding-top: 50px;
+    padding: 50px 0;
     color: white;
+}
+
+.top{
+    margin-bottom: 20px;
 }
 
 .social{
